--- a/Second Year/Second Semester/Artificial Intelligence/Labs ML/L05/lab5.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/Labs ML/L05/lab5.ipynb
@@ -2,25 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-15T06:33:29.464477600Z",
-     "start_time": "2024-05-15T06:33:28.926587600Z"
+     "end_time": "2024-05-15T09:13:24.757167600Z",
+     "start_time": "2024-05-15T09:13:24.743478Z"
     }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import KFold, GridSearchCV\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Data Loading"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d0dd73482370e1d8"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "outputs": [],
    "source": [
     "training_data = np.load('./data/training_data.npy')\n",
@@ -29,122 +41,345 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T06:30:29.818376100Z",
-     "start_time": "2024-05-15T06:30:29.808329Z"
+     "end_time": "2024-05-15T09:13:25.536693Z",
+     "start_time": "2024-05-15T09:13:25.520588100Z"
     }
    },
    "id": "1ce3ebc10af35f07"
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "training_data, prices = shuffle(training_data, prices, random_state=0)"
+    "# Data Shuffling"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-15T06:30:30.633438700Z",
-     "start_time": "2024-05-15T06:30:30.624749Z"
-    }
+    "collapsed": false
    },
-   "id": "80f5c13ba90093eb"
+   "id": "ae449a8b4147853a"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "outputs": [
     {
      "data": {
       "text/plain": "array([2.0170e+03, 1.8351e+04, 2.1900e+01, 6.2400e+02, 3.7480e+01,\n       4.0000e+00, 1.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00,\n       0.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00], dtype=float32)"
      },
-     "execution_count": 26,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "training_data, prices = shuffle(training_data, prices, random_state=0)\n",
     "training_data[0]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T06:34:54.683308400Z",
-     "start_time": "2024-05-15T06:34:54.671613700Z"
+     "end_time": "2024-05-15T09:13:26.462202500Z",
+     "start_time": "2024-05-15T09:13:26.453220200Z"
     }
    },
-   "id": "9bb1b9faf2f48c12"
+   "id": "80f5c13ba90093eb"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Normalization"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f8d208b833350914"
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "def normalization(training_data, testing_data):\n",
-    "    mean_training_data = np.mean(training_data, axis=0)\n",
-    "    standard_deviation = np.sqrt(np.mean(np.power(training_data - mean_training_data, 2)))\n",
-    "    new_training_data = np.divide(training_data, standard_deviation)\n",
-    "    \n",
-    "    mean_testing_data = np.mean(testing_data, axis=0)\n",
-    "    standard_deviation_testing = np.sqrt(np.mean(np.power(testing_data - mean_testing_data, 2)))\n",
-    "    new_testing_data = np.divide(testing_data, standard_deviation_testing)\n",
+    "    std_training = np.std(training_data, axis=0)\n",
+    "    # fuel_type and transimission shouldn't be normalized\n",
+    "    std_training[7:] = 1\n",
+    "    new_training_data = np.divide(training_data, std_training)\n",
+    "\n",
+    "    new_testing_data = np.divide(testing_data, std_training)\n",
     "    \n",
     "    return new_training_data, new_testing_data"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T06:49:08.941446200Z",
-     "start_time": "2024-05-15T06:49:08.929963100Z"
+     "end_time": "2024-05-15T09:13:27.943004600Z",
+     "start_time": "2024-05-15T09:13:27.939956300Z"
     }
    },
    "id": "301f66d2282e30aa"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "39a99f2a1e726388"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "outputs": [],
    "source": [
-    "new_training_data, new_prices = normalization(training_data, prices)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    new_training_data, new_prices, test_size=0.2\n",
-    ")"
+    "class Model:\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "    \n",
+    "    def fit(self, train, test):\n",
+    "        self.model.fit(train, test)\n",
+    "        \n",
+    "    def predict(self, test):\n",
+    "        return self.model.predict(test)\n",
+    "    \n",
+    "    def accuracy(self, true, predict):\n",
+    "        return mean_squared_error(true, predict), mean_absolute_error(true, predict)\n",
+    "    \n",
+    "    def tune(self, train, test):\n",
+    "        param_grid = {\n",
+    "            'alpha': [1, 10, 100, 1000]\n",
+    "        }\n",
+    "        \n",
+    "        grid_search = GridSearchCV(estimator=self.model, param_grid=param_grid, cv=5, scoring='neg_mean_absolute_error')\n",
+    "        grid_search.fit(train, test)\n",
+    "        \n",
+    "        return grid_search.best_params_['alpha']\n",
+    "    \n",
+    "    def getCoefficients(self):\n",
+    "        return self.model.coef_\n",
+    "    \n",
+    "    def getBias(self):\n",
+    "        return self.model.intercept_\n",
+    "    \n",
+    "    def mostSignificantFeature(self):\n",
+    "        features = [\n",
+    "            'Year', 'Killometers_Driven', 'Mileage',\n",
+    "            'Engine', 'Power', 'Seats', 'Owner_Type',\n",
+    "            'FuelType', 'FuelType', 'FuelType', 'FuelType', 'FuelType',\n",
+    "            'Transmission', 'Transmission'\n",
+    "        ]\n",
+    "        coefficients = np.abs(self.getCoefficients())\n",
+    "        \n",
+    "        most_significant_index = np.argmax(coefficients)\n",
+    "        \n",
+    "        most_significant = features[most_significant_index]\n",
+    "        \n",
+    "        return most_significant\n",
+    "\n",
+    "    def leastSignificantFeature(self):\n",
+    "        features = [\n",
+    "            'Year', 'Killometers_Driven', 'Mileage',\n",
+    "            'Engine', 'Power', 'Seats', 'Owner_Type',\n",
+    "            'FuelType', 'FuelType', 'FuelType', 'FuelType', 'FuelType',\n",
+    "            'Transmission', 'Transmission'\n",
+    "        ]\n",
+    "        coefficients = np.abs(self.getCoefficients())\n",
+    "\n",
+    "        least_significant_index = np.argmin(coefficients)\n",
+    "\n",
+    "        least_significant = features[least_significant_index]\n",
+    "\n",
+    "        return least_significant"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T06:49:09.679066500Z",
-     "start_time": "2024-05-15T06:49:09.669202400Z"
+     "end_time": "2024-05-15T09:23:54.003661900Z",
+     "start_time": "2024-05-15T09:23:53.999602600Z"
     }
    },
-   "id": "eea39706eb5cefca"
+   "id": "82391f7808d1ff7a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Split \n",
+    "- Method: KFold with 3 splits\n",
+    "- Model: LinearRegression"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7c323ddf1ce52f93"
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 93,
+   "outputs": [],
+   "source": [
+    "def train_test_model(model_type):\n",
+    "    kf = KFold(n_splits=3)\n",
+    "    model = Model(model_type)\n",
+    "    accuracy = []\n",
+    "    alpha = []\n",
+    "    \n",
+    "    for train_index, test_index in kf.split(training_data):\n",
+    "        X_train, X_test = training_data[train_index], training_data[test_index]\n",
+    "        Y_train, Y_test = prices[train_index], prices[test_index] \n",
+    "        \n",
+    "        X_train, X_test = normalization(X_train, X_test)\n",
+    "        \n",
+    "        model.fit(X_train, Y_train)\n",
+    "        accuracy.append([*model.accuracy(Y_test, model.predict(X_test))])\n",
+    "    \n",
+    "        if isinstance(model.model, Ridge):\n",
+    "            alpha.append(model.tune(X_train, Y_train))\n",
+    "            \n",
+    "    if isinstance(model.model, Ridge):\n",
+    "        print(f\"BEST ALPHA: {np.mean(np.array(alpha))}\")\n",
+    "        \n",
+    "    return np.array(accuracy)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-15T09:13:30.473578800Z",
+     "start_time": "2024-05-15T09:13:30.456415700Z"
+    }
+   },
+   "id": "34cfce0e6a5a7e4e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.9108790e-01 8.1718349e+00 1.9346345e-03 1.1374054e-01 7.4971835e-03\n",
-      " 4.7510667e-04 9.5021336e-05 0.0000000e+00 0.0000000e+00 9.5021336e-05\n",
-      " 0.0000000e+00 0.0000000e+00 9.5021336e-05 0.0000000e+00]\n"
+      "LINEAR\n",
+      "\tAVERAGE MSE: 3.17\n",
+      "\tAVERAGE MAE: 1.32\n",
+      "\n",
+      "BEST ALPHA: 100.0\n",
+      "RIDGE\n",
+      "\tAVERAGE MSE: 3.17\n",
+      "\tAVERAGE MAE: 1.32\n",
+      "\n",
+      "LASSO\n",
+      "\tAVERAGE MSE: 6.22\n",
+      "\tAVERAGE MAE: 1.92\n"
      ]
     }
    ],
    "source": [
-    "print(X_train[0])"
+    "# Linear Regression\n",
+    "mean_mse, mean_mae = np.mean(train_test_model(LinearRegression()), axis=0)\n",
+    "print(f\"LINEAR\\n\\tAVERAGE MSE: {mean_mse:.2f}\\n\\tAVERAGE MAE: {mean_mae:.2f}\", end=\"\\n\\n\")\n",
+    "\n",
+    "# Ridge Regression\n",
+    "mean_mse, mean_mae = np.mean(train_test_model(Ridge()), axis=0)\n",
+    "print(f\"RIDGE\\n\\tAVERAGE MSE: {mean_mse:.2f}\\n\\tAVERAGE MAE: {mean_mae:.2f}\", end=\"\\n\\n\")\n",
+    "\n",
+    "# Lasso Regression\n",
+    "mean_mse, mean_mae = np.mean(train_test_model(Lasso()), axis=0)\n",
+    "print(f\"LASSO\\n\\tAVERAGE MSE: {mean_mse:.2f}\\n\\tAVERAGE MAE: {mean_mae:.2f}\", end=\"\\n\\n\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T06:49:11.794500900Z",
-     "start_time": "2024-05-15T06:49:11.782296400Z"
+     "end_time": "2024-05-15T09:13:31.349388200Z",
+     "start_time": "2024-05-15T09:13:31.236830900Z"
     }
    },
-   "id": "82391f7808d1ff7a"
+   "id": "508efd7bde6ad523"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Coefficient and Bias"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4b4ef3aa696229ce"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COFFICIENTS: [ 5.15551627e-01 -3.74514866e-06 -1.01766974e-01  9.83963604e-04\n",
+      "  3.80781442e-02  1.65120900e-01 -1.68956667e-01  0.00000000e+00\n",
+      "  6.68236494e-01 -6.68236554e-01  0.00000000e+00  0.00000000e+00\n",
+      " -5.44795752e-01  5.44793844e-01]\n",
+      "BIAS: -1035.5355224609375\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mal13\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_ridge.py:204: LinAlgWarning: Ill-conditioned matrix (rcond=1.29191e-11): result may not be accurate.\n",
+      "  return linalg.solve(A, Xy, assume_a=\"pos\", overwrite_a=True).T\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Model(Ridge(alpha=100))\n",
+    "model.fit(training_data, prices)\n",
+    "\n",
+    "print(f\"COFFICIENTS: {model.getCoefficients()}\\nBIAS: {model.getBias()}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-15T09:23:58.288836400Z",
+     "start_time": "2024-05-15T09:23:58.271529900Z"
+    }
+   },
+   "id": "614abb4e553107d6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Most and Least Significant Feature"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d407178048643982"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MOST: FuelType\n",
+      "LEAST: FuelType\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_significant = model.mostSignificantFeature()\n",
+    "least_significant = model.leastSignificantFeature()\n",
+    "\n",
+    "print(f\"MOST: {most_significant}\\nLEAST: {least_significant}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-15T09:24:44.047544800Z",
+     "start_time": "2024-05-15T09:24:44.032738800Z"
+    }
+   },
+   "id": "18cd9a4fcad1df18"
   }
  ],
  "metadata": {
