fix: normalization function

--- a/Second Year/Second Semester/Artificial Intelligence/Labs ML/L05/lab5.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/Labs ML/L05/lab5.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:13:24.757167600Z",
-     "start_time": "2024-05-15T09:13:24.743478Z"
+     "end_time": "2024-05-16T09:07:29.250639800Z",
+     "start_time": "2024-05-16T09:07:28.694991200Z"
     }
    },
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "training_data = np.load('./data/training_data.npy')\n",
@@ -41,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:13:25.536693Z",
-     "start_time": "2024-05-15T09:13:25.520588100Z"
+     "end_time": "2024-05-16T09:07:36.437036200Z",
+     "start_time": "2024-05-16T09:07:36.408316800Z"
     }
    },
    "id": "1ce3ebc10af35f07"
@@ -59,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "array([2.0170e+03, 1.8351e+04, 2.1900e+01, 6.2400e+02, 3.7480e+01,\n       4.0000e+00, 1.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00,\n       0.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00], dtype=float32)"
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:13:26.462202500Z",
-     "start_time": "2024-05-15T09:13:26.453220200Z"
+     "end_time": "2024-05-16T09:07:38.366180100Z",
+     "start_time": "2024-05-16T09:07:38.335094Z"
     }
    },
    "id": "80f5c13ba90093eb"
@@ -95,24 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def normalization(training_data, testing_data):\n",
     "    std_training = np.std(training_data, axis=0)\n",
     "    # fuel_type and transimission shouldn't be normalized\n",
     "    std_training[7:] = 1\n",
-    "    new_training_data = np.divide(training_data, std_training)\n",
+    "    mean = np.mean(training_data)\n",
+    "    new_training_data = np.divide(training_data - mean, std_training)\n",
     "\n",
-    "    new_testing_data = np.divide(testing_data, std_training)\n",
+    "    new_testing_data = np.divide(testing_data - mean, std_training)\n",
     "    \n",
     "    return new_training_data, new_testing_data"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:13:27.943004600Z",
-     "start_time": "2024-05-15T09:13:27.939956300Z"
+     "end_time": "2024-05-16T09:08:05.007168600Z",
+     "start_time": "2024-05-16T09:08:04.996475Z"
     }
    },
    "id": "301f66d2282e30aa"
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "class Model:\n",
@@ -194,8 +195,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:23:54.003661900Z",
-     "start_time": "2024-05-15T09:23:53.999602600Z"
+     "end_time": "2024-05-16T09:08:06.363198200Z",
+     "start_time": "2024-05-16T09:08:06.357150500Z"
     }
    },
    "id": "82391f7808d1ff7a"
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def train_test_model(model_type):\n",
@@ -243,15 +244,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:13:30.473578800Z",
-     "start_time": "2024-05-15T09:13:30.456415700Z"
+     "end_time": "2024-05-16T09:08:08.814123200Z",
+     "start_time": "2024-05-16T09:08:08.809040400Z"
     }
    },
    "id": "34cfce0e6a5a7e4e"
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -288,8 +289,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:13:31.349388200Z",
-     "start_time": "2024-05-15T09:13:31.236830900Z"
+     "end_time": "2024-05-16T09:08:10.303235Z",
+     "start_time": "2024-05-16T09:08:10.167851100Z"
     }
    },
    "id": "508efd7bde6ad523"
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -337,8 +338,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:23:58.288836400Z",
-     "start_time": "2024-05-15T09:23:58.271529900Z"
+     "end_time": "2024-05-16T09:08:18.152996100Z",
+     "start_time": "2024-05-16T09:08:18.127652400Z"
     }
    },
    "id": "614abb4e553107d6"
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -375,8 +376,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-15T09:24:44.047544800Z",
-     "start_time": "2024-05-15T09:24:44.032738800Z"
+     "end_time": "2024-05-16T09:08:23.598970800Z",
+     "start_time": "2024-05-16T09:08:23.585428900Z"
     }
    },
    "id": "18cd9a4fcad1df18"
