chore: presented exercises

--- a/AI First Year/First Semester/Practical Machine Learning/Labs/L02/Lab2-knn.ipynb
+++ b/AI First Year/First Semester/Practical Machine Learning/Labs/L02/Lab2-knn.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -179,25 +179,44 @@
    },
    "outputs": [],
    "source": [
+    "def cosine_distance(x: np.ndarray, y: np.ndarray) -> float:\n",
+    "    dot_product = np.dot(x, y)\n",
+    "    x_norm = np.linalg.norm(x, axis=1)\n",
+    "    y_norm = np.linalg.norm(y)\n",
+    "\n",
+    "    return 1 - dot_product / (x_norm * y_norm)\n",
+    "\n",
     "class Knn_classifier:\n",
     "    \n",
     "    def __init__(self, train_images, train_labels):\n",
     "        self.train_images = train_images\n",
     "        self.train_labels = train_labels\n",
+    "\n",
+    "        self.norm_mapping = {\n",
+    "            \"l1\": lambda test_image: np.linalg.norm(self.train_images - test_image, ord=1, axis=1),\n",
+    "            \"l2\": lambda test_image: np.linalg.norm(self.train_images - test_image, ord=2, axis=1),\n",
+    "            \"cos\": lambda test_image: cosine_distance(self.train_images, test_image),\n",
+    "        }\n",
     "    \n",
     "    # a. Write the classify_image(self, test_image, num_neighbors=3, metric='l2') function in order to classify 'test_image'\n",
     "    # example using the k-NN method with 'num_neighbors' neighbors and 'metric' distance.\n",
     "    def classify_image(self, test_image, num_neighbors=3, metric=\"l2\"):\n",
-    "        ord = 2 if metric == \"l2\" else 1\n",
-    "        distances = np.linalg.norm(self.train_images - test_image, ord=ord, axis=1)\n",
+    "        distances = self.norm_mapping[metric](test_image)\n",
     "\n",
-    "        top_k = np.argsort(distances)[:num_neighbors]\n",
+    "        rounded_distances = np.round(distances, decimals=4)\n",
+    "        top_k = np.argsort(rounded_distances)[:num_neighbors]\n",
     "        top_k_labels = self.train_labels[top_k]\n",
     "\n",
     "        unique_labels, counts = np.unique(top_k_labels, return_counts=True)\n",
-    "        most_common_label = unique_labels[np.argmax(counts)]\n",
+    "\n",
+    "        mx_i = 0\n",
+    "        for index in range(len(unique_labels)):\n",
+    "            if counts[index] > counts[mx_i]: \n",
+    "                mx_i = index\n",
+    "            elif counts[index] == counts[mx_i] and rounded_distances[index] > rounded_distances[mx_i]:\n",
+    "                mx_i = index\n",
     "        \n",
-    "        return most_common_label\n",
+    "        return unique_labels[mx_i]\n",
     "\n",
     "    \n",
     "    # b. Write the classify_images(self, test_images, num_neighbors=3, metric='l2') function in order to predict the labels of \n",
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -240,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3-NN Accuracy score: 0.90\n"
+      "3-NN Accuracy score: 0.91\n"
      ]
     }
    ],
@@ -251,7 +270,7 @@
     "test_labels = np.load('data/test_labels.npy') # load testing labels\n",
     "\n",
     "model = Knn_classifier(train_images, train_labels)\n",
-    "predictions = model.classify_images(test_images)\n",
+    "predictions = model.classify_images(test_images, metric=\"cos\")\n",
     "accuracy = model.accuracy_score(test_labels, predictions)\n",
     "print(f\"3-NN Accuracy score: {accuracy:.2f}\")"
    ]
